@@ -1,3 +1,13 @@
+2011-07-19  Chris Fleizach  <cfleizach@apple.com>
+
+        If the control associated with a <label> is hidden, the label is also hidden (incorrectly)
+        https://bugs.webkit.org/show_bug.cgi?id=64752
+
+        Reviewed by Darin Adler.
+
+        * platform/mac/accessibility/label-element-with-hidden-control-expected.txt: Added.
+        * platform/mac/accessibility/label-element-with-hidden-control.html: Added.
+
 2011-07-19  Ryosuke Niwa  <rniwa@webkit.org>
 
         Remove failing Chromium test expectations after r91224.
